--- a/Day 4/Python_Training_Session_for_FedEx.ipynb
+++ b/Day 4/Python_Training_Session_for_FedEx.ipynb
@@ -144,9 +144,51 @@
     "filtered_packages = list(filter(lambda x: x <= weight_limit, package_weights))\n",
     "print(\"Packages within weight limit:\", filtered_packages)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "34631a17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 10], [5], [7, 8, 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = [[1, 10, 15], [20, 5, 30], [7, 8, 9]]\n",
+    "threshold = 10\n",
+    "\n",
+    "# Filtering each sublist\n",
+    "filtered_matrix = [list(filter(lambda x: x <= threshold, sublist)) for sublist in matrix]\n",
+    "\n",
+    "print(filtered_matrix)"
+   ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
