--- a/Day 7/Class Notes_.ipynb
+++ b/Day 7/Class Notes_.ipynb
@@ -489,39 +489,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "worked with FedEx more than 10 years\nno extra vacation\n"
+      "worked with FedEx more than 10 years\nno extra vacation\n3 days extra vacations\n"
      ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m\n",
-       "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)\n",
-       "File \u001B[0;32m<command-3996795641472036>, line 29\u001B[0m\n",
-       "\u001B[1;32m     26\u001B[0m             \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m3 days extra vacations\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
-       "\u001B[1;32m     28\u001B[0m emp3\u001B[38;5;241m=\u001B[39mDepartment(\u001B[38;5;241m55555\u001B[39m,\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mJeanAdobe\u001B[39m\u001B[38;5;124m\"\u001B[39m,\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mmanager\u001B[39m\u001B[38;5;124m\"\u001B[39m ,\u001B[38;5;241m100000\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m2013-01-01\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
-       "\u001B[0;32m---> 29\u001B[0m emp3\u001B[38;5;241m.\u001B[39mcmpvacation()\n",
-       "\n",
-       "File \u001B[0;32m<command-3996795641472036>, line 25\u001B[0m, in \u001B[0;36mDepartment.cmpvacation\u001B[0;34m(self)\u001B[0m\n",
-       "\u001B[1;32m     24\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mcmpvacation\u001B[39m(\u001B[38;5;28mself\u001B[39m):\n",
-       "\u001B[0;32m---> 25\u001B[0m      \u001B[38;5;28;01mif\u001B[39;00m (\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mhire_date\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m<\u001B[39;49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mdatetime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mstrptime\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m2014-01-01\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m%\u001B[39;49m\u001B[38;5;124;43mY-\u001B[39;49m\u001B[38;5;124;43m%\u001B[39;49m\u001B[38;5;124;43mm-\u001B[39;49m\u001B[38;5;132;43;01m%d\u001B[39;49;00m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m):\n",
-       "\u001B[1;32m     26\u001B[0m         \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m3 days extra vacations\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
-       "\n",
-       "\u001B[0;31mTypeError\u001B[0m: '<=' not supported between instances of 'str' and 'datetime.datetime'"
-      ]
-     },
-     "metadata": {
-      "application/vnd.databricks.v1+output": {
-       "arguments": {},
-       "data": "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m\n\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)\nFile \u001B[0;32m<command-3996795641472036>, line 29\u001B[0m\n\u001B[1;32m     26\u001B[0m             \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m3 days extra vacations\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     28\u001B[0m emp3\u001B[38;5;241m=\u001B[39mDepartment(\u001B[38;5;241m55555\u001B[39m,\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mJeanAdobe\u001B[39m\u001B[38;5;124m\"\u001B[39m,\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mmanager\u001B[39m\u001B[38;5;124m\"\u001B[39m ,\u001B[38;5;241m100000\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m2013-01-01\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m---> 29\u001B[0m emp3\u001B[38;5;241m.\u001B[39mcmpvacation()\n\nFile \u001B[0;32m<command-3996795641472036>, line 25\u001B[0m, in \u001B[0;36mDepartment.cmpvacation\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m     24\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mcmpvacation\u001B[39m(\u001B[38;5;28mself\u001B[39m):\n\u001B[0;32m---> 25\u001B[0m      \u001B[38;5;28;01mif\u001B[39;00m (\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mhire_date\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m<\u001B[39;49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mdatetime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mstrptime\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m2014-01-01\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m%\u001B[39;49m\u001B[38;5;124;43mY-\u001B[39;49m\u001B[38;5;124;43m%\u001B[39;49m\u001B[38;5;124;43mm-\u001B[39;49m\u001B[38;5;132;43;01m%d\u001B[39;49;00m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m):\n\u001B[1;32m     26\u001B[0m         \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m3 days extra vacations\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\n\u001B[0;31mTypeError\u001B[0m: '<=' not supported between instances of 'str' and 'datetime.datetime'",
-       "errorSummary": "<span class='ansi-red-fg'>TypeError</span>: '<=' not supported between instances of 'str' and 'datetime.datetime'",
-       "errorTraceType": "ansi",
-       "metadata": {},
-       "type": "ipynbError"
-      }
-     },
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -549,7 +518,7 @@
     "        super().__init__(emp_ID, emp_nm, role,sallary, hire_date)\n",
     "\n",
     "    def cmpvacation(self):\n",
-    "         if (datetime.striptime(self.hire_date) <= datetime.strptime(\"2014-01-01\", \"%Y-%m-%d\")):\n",
+    "         if (datetime.strptime(self.hire_date,\"%Y-%m-%d\") <= datetime.strptime(\"2014-01-01\", \"%Y-%m-%d\")):\n",
     "            print(\"3 days extra vacations\")\n",
     "\n",
     "emp3=Department(55555,\"JeanAdobe\",\"manager\" ,100000, \"2013-01-01\")\n",
